# the-shape-of-experience

./: .gitattributes  .gitignore  2026-02-19-154302-this-session-is-being-continued-from-a-previous-co.txt  CLAUDE.md  CONTENT_PLAN.md  EXPERIMENTS.md  Makefile  NOTES.md  README.md
empirical/: README.md  pyproject.toml
empirical/experiments/study_c_computational/: CORRECTION.md  RESULTS.md  analyze_representations.py  train_agents.py  viability_env.py
empirical/experiments/study_ca_affect/: ANALYSIS_1D_COLLAPSE.md  NOTES_part1_review.md  RESEARCH_LOG.md  RESULTS_V11_4.md  V11_EXPERIMENT_LOG.md  analyze_selfhood.py  experiment_registry.json  generate_figures.py  lambda_chain_seeds.sh  lambda_download.sh  lambda_setup.sh  make_figures.py  phi_landscape_figure.py  v11_affect.py  v11_affect_hd.py  v11_affect_hier.py  v11_evolution.py  v11_modal.py  v11_patterns.py  v11_run.py  v11_substrate.py  v11_substrate_hd.py  v11_substrate_hier.py  v11_visualize.py  v12_evolution.py  v12_run.py  v12_substrate_attention.py  v13_affect_geometry.py  v13_affect_geometry_run.py  v13_aggregate.py  v13_capstone.py  v13_capstone_run.py  v13_communication.py  v13_communication_run.py  v13_counterfactual.py  v13_counterfactual_run.py  v13_entanglement.py  v13_entanglement_run.py  v13_evolution.py  v13_gpu_run.py  (+94 more)
empirical/experiments/study_llm_affect/: AFFECT_MEASUREMENT_SUMMARY.md  EXPERIMENT_OUTPUTS.md  FINDINGS.md  INTEGRATION_METHODOLOGY.md  MEASUREMENT_PROBLEM.md  METHODOLOGICAL_REVISION.md  NEUTRAL_TASK_AFFECT_EMERGENCE.md  README.md  REFLECTIONS_AFTER_V9  SCIENTIFIC_ASSESSMENT.md  STUDY_DESIGN_NOTES.md  V10_EXPERIMENT_LOG.md  V4_CONCLUSIONS.md  V5_CONCLUSIONS.md  __init__.py  affect_calculator.py  affect_space_analysis.py  agent.py  analysis.py  comprehensive_study.py  embedding_affect_v2.py  embedding_affect_v3.py  embedding_analysis.py  emotion_spectrum.py  integration_decomposition_study.py  large_scale_study.py  multi_model_study_v2.py  neutral_task_study.py  neutral_tasks.py  rl_affect_agent_v4.py  run_neutral_study_local.py  run_study.py  scenarios.py  ssm_affect_v5.py  ssm_affect_v6.py  study_runner.py  task_elicitation.py  v10_ablation_plots.py  v10_affect.py  v10_agent.py  (+8 more)
empirical/notebooks/: 01_dimension_validation.ipynb
empirical/protocols/: serious_studies.md  study_protocols.md
empirical/results/large_scale/: comprehensive_affect_dataset.json
empirical/results/multi_model/: anthropic_claude-3-5-haiku-latest.json  anthropic_claude-3-5-sonnet-latest.json  openai_gpt-4o-mini.json  openai_gpt-4o.json  summary.json
empirical/results/multi_model_v2/: claude_4.5_sonnet.json  claude_4_haiku.json  claude_4_sonnet.json  gpt4o.json  gpt4o_mini.json  summary.json
empirical/results/task_elicitation/: anthropic_claude-3-5-haiku-latest_escalating_crisis.json  (+3 more)
empirical/src/inevitability_empirical/: __init__.py  (+3 more)
(+1260 files in other folders)
