[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inevitability-empirical"
version = "0.1.0"
description = "Empirical validation tools for the six-dimensional affect framework"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Jacob Valdez", email = "jacob@example.com"}
]
keywords = ["affect", "emotion", "consciousness", "psychology", "empirical"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "numpy>=1.20",
    "scipy>=1.7",
    "pandas>=1.3",
    "matplotlib>=3.4",
    "seaborn>=0.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=3.0",
    "black>=22.0",
    "mypy>=0.990",
    "jupyter>=1.0",
]
neuro = [
    "mne>=1.0",  # EEG analysis
    "nilearn>=0.9",  # fMRI analysis
]

[project.urls]
"Homepage" = "https://github.com/JacobFV/the-inevitability-thesis"
"Bug Tracker" = "https://github.com/JacobFV/the-inevitability-thesis/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=inevitability_empirical"
