[project]
name = "inevitability-empirical"
version = "0.1.0"
description = "Empirical validation tools for the six-dimensional affect framework"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Jacob Valdez"}
]
keywords = ["affect", "emotion", "consciousness", "psychology", "empirical"]

dependencies = [
    "numpy>=1.20",
    "scipy>=1.7",
    "pandas>=1.3",
    "matplotlib>=3.4",
    "seaborn>=0.11",
    "torch>=2.0",
    "gymnasium>=0.29",
    "scikit-learn>=1.0",
    "protobuf>=6.33.2",
    "openai>=2.14.0",
    "python-dotenv>=1.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=3.0",
    "black>=22.0",
    "mypy>=0.990",
    "jupyter>=1.0",
]
llm = [
    "openai>=1.0",
    "anthropic>=0.18",
    "python-dotenv>=1.0",
]
ssm = [
    "transformers>=4.40",
    "accelerate>=0.25",
    "sentencepiece>=0.1.99",
]

[project.urls]
"Homepage" = "https://github.com/JacobFV/the-inevitability-thesis"

[dependency-groups]
dev = [
    "pytest>=7.0",
    "black>=22.0",
]
